--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <button id="show_sketch" class="btn btn-info" data-toggle="modal" data-target="#myModal">Show Sketch</button>
   </h1>
   <p id="yours">Your Sketch:</p>
-  <p id="confidence">Confidence</p>
+  <p id="confidence">Confidence: </p>
   <span id="drawn">Sketch to be drawn:</span>
 
 </center>
